docs/v1.10.3/media/EXAMPLES.md
# Examples

> This file is auto-generated from metadata in `examples/*.ts`.
> Do not edit this file manually. Run `yarn generate:examples-md` instead.

Runnable examples live in [`examples/`](./examples).

## Table of Contents

- [Blueprint with Build Context](#blueprint-with-build-context)
- [Devbox From Blueprint (Run Command, Shutdown)](#devbox-from-blueprint-lifecycle)
- [MCP Hub + Claude Code + GitHub](#mcp-github-tools)

<a id="blueprint-with-build-context"></a>
## Blueprint with Build Context

**Use case:** Create a blueprint using the object store to provide docker build context files, then verify files are copied into the image.

**Tags:** `blueprint`, `object-store`, `build-context`, `devbox`, `cleanup`

### Workflow
- Create a temporary directory with sample application files
- Upload the directory to object storage as build context
- Create a blueprint with a Dockerfile that copies the context files
- Create a devbox from the blueprint
- Verify the files were copied into the image
- Shutdown devbox and delete blueprint and storage object

### Prerequisites
- `RUNLOOP_API_KEY`

### Run
```sh
yarn tsn -T examples/blueprint-with-build-context.ts
```

### Test
```sh
yarn test:examples
```

**Source:** [`examples/blueprint-with-build-context.ts`](./examples/blueprint-with-build-context.ts)

<a id="devbox-from-blueprint-lifecycle"></a>
## Devbox From Blueprint (Run Command, Shutdown)

**Use case:** Create a devbox from a blueprint, run a command, fetch logs, validate output, and cleanly tear everything down.

**Tags:** `devbox`, `blueprint`, `commands`, `logs`, `cleanup`

### Workflow
- Create a blueprint
- Fetch blueprint build logs
- Create a devbox from the blueprint
- Execute a command in the devbox
- Fetch devbox logs
- Validate exit code, stdout, and logs
- Shutdown devbox and delete blueprint

### Prerequisites
- `RUNLOOP_API_KEY`

### Run
```sh
yarn tsn -T examples/devbox-from-blueprint-lifecycle.ts
```

### Test
```sh
yarn test:examples
```

**Source:** [`examples/devbox-from-blueprint-lifecycle.ts`](./examples/devbox-from-blueprint-lifecycle.ts)

<a id="mcp-github-tools"></a>
## MCP Hub + Claude Code + GitHub

**Use case:** Connect Claude Code running in a devbox to GitHub tools through MCP Hub without exposing raw GitHub credentials to the devbox.

**Tags:** `mcp`, `devbox`, `github`, `commands`, `cleanup`

### Workflow
- Create an MCP config for GitHub
- Store GitHub token as a Runloop secret
- Launch a devbox with MCP Hub wiring
- Install Claude Code and register MCP endpoint
- Run a Claude prompt through MCP tools
- Shutdown devbox and clean up cloud resources

### Prerequisites
- `RUNLOOP_API_KEY`
- `GITHUB_TOKEN (GitHub PAT with repo scope)`
- `ANTHROPIC_API_KEY`

### Run
```sh
GITHUB_TOKEN=ghp_xxx ANTHROPIC_API_KEY=sk-ant-xxx yarn tsn -T examples/mcp-github-tools.ts
```

### Test
```sh
yarn test:examples
```

**Source:** [`examples/mcp-github-tools.ts`](./examples/mcp-github-tools.ts)
